# agents-ide

./: .gitignore  LICENSE  README.md  install-unix.sh  install-windows.ps1  pyproject.toml
agents_ide/: __init__.py  __main__.py  daemon.py  history.py  lsp.py  manager.py
agents_ide/mcp/: __init__.py  _core.py  analysis.py  copy_paste.py  generation.py  history.py  lint.py  lsp.py  navigation.py  patterns.py  profiling.py  refactoring.py  search.py  structure.py  typecheck.py
skill/: SKILL.md  change_signature.md  code_quality.md  code_search.md  copy_paste.md  find_and_replace.md  move.md  overview.md  rename.md  rename_local.md  structure.md  symbol_search.md  toggle_comment.md
skill/use_cases/: api_migration.md  batch_rename.md  break_complex_module.md  clean_dead_code.md  extract_duplicates.md  quick_test_toggle.md  reduce_complexity.md  refactor_function.md  split_large_file.md  understand_codebase.md
